--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,13 +6,13 @@
 	<servlet>
 		<display-name>MainServlet</display-name>
 		<servlet-name>MainServlet</servlet-name>
-		<servlet-class>com.ilinksolutions.UKVisaEmail.MainServlet</servlet-class>
+		<servlet-class>com.ilinksolutions.p3m1.MainServlet</servlet-class>
 	</servlet>
 	
 	<servlet>
 		<display-name>Upload</display-name>
 		<servlet-name>Upload</servlet-name>
-		<servlet-class>com.ilinksolutions.UKVisaEmail.Upload</servlet-class>
+		<servlet-class>com.ilinksolutions.p3m1.Upload</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
