Rename the packages

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>p3m1</name>
+	<name>UKVisaEmail</name>
 	<comment></comment>
 	<projects>
 	</projects>
